@@ -4,6 +4,6 @@ b2: {mod} top.t.unnamedblk2
 b3n: {mod}.b3named: top.t.unnamedblk2.b3named
 b3: {mod} top.t.unnamedblk2.unnamedblk3
 b4: {mod} top.t.unnamedblk2.unnamedblk3.unnamedblk4
-t1 {mod}.tsk top.t
-t2 {mod}.tsk top.t.unnamedblk7
+t1 {mod}.tsk top.t.tsk
+t2 {mod}.tsk top.t.tsk.unnamedblk7
 *-* All Finished *-*
